--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Enter text here...</textarea>
 
 <div id="az">
 <textarea  rows="20" cols="100" name="aztext" id="textaz" disabled >
-Enter text here...</textarea>
+Converted text...</textarea>
 </div>
 
 </body>
