--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf8" />
-	<meta name="author" content="admin" />
-    <link rel="stylesheet" href="style.css"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Nazir Alijanov" />
+	<meta name="description" content="kiril convertor">
 
 	<title>KirilConvert</title>
+	<style>
+	* {
+		box-sizing: border-box;
+	}
+	textarea {
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+		width: 100%;
+	}
+	#kiril, #az {
+		float: left;
+		padding: 15px;
+		width: 50%;
+	}
+
+	@media only screen and (max-width: 768px) {
+		#kiril, #az { 
+			width: 100%;
+		}
+	}
+</style>
 </head>
 
 <body>
